Add hand subcommand to generate_icons for exporting held item